--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
-  }
+  },
+  "homepage": ".",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
 }
